fixed form spacing on mobile

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -438,17 +438,14 @@ input:checked ~ .accordion-content {
 }
 
 /* Contact Form */
-form {
-  width: 100%;
-}
-
 .form {
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  margin-top: 1rem;
-  margin-bottom: 1rem;
+  margin-top: 2rem;
+  margin-bottom: 2rem;
   padding: 1rem;
+  width: 16rem;
   border: 2px solid black;
   font-size: var(--h6);
   font-weight: 600;
@@ -479,7 +476,6 @@ form {
 .form-button {
   width: 12rem;
   padding: 0.4rem;
-
   border: 2px solid black;
   font-family: var(--sans-serif);
   font-size: var(--h6);
@@ -515,6 +511,10 @@ form {
 
   td {
     font-size: var(--h4);
+  }
+
+  .form {
+    width: 100%;
   }
 }
 
